--- a/fly-gateway/pom.xml
+++ b/fly-gateway/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>fly-user-service</artifactId>
+    <artifactId>fly-gateway</artifactId>
 
 
 </project>
