--- a/services/fly-notice-service/pom.xml
+++ b/services/fly-notice-service/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>fly-notice-service</artifactId>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fyp</groupId>
+            <artifactId>fly-services-parent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
