--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
         <module>services/fly-notice-service</module>
         <module>services/fly-comment-service</module>
         <module>services/fly-services-parent</module>
+        <module>services/fly-services-discovery</module>
         <module>fly-web</module>
         <module>fly-gateway</module>
-        <module>services/fly-services-discovery</module>
         <module>fly-common</module>
     </modules>
 
@@ -53,18 +53,25 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <!--<configuration>-->
-                    <!--<mainClass>com.tuling.springboot.base.SpringBootStart</mainClass>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>repackage</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+                <version>2.1.3.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
