--- a/services/fly-comment-service/pom.xml
+++ b/services/fly-comment-service/pom.xml
@@ -11,6 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fly-comment-service</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -23,5 +24,4 @@
             <artifactId>fly-services-parent</artifactId>
         </dependency>
     </dependencies>
-
 </project>
