--- a/services/fly-notice-service/pom.xml
+++ b/services/fly-notice-service/pom.xml
@@ -6,11 +6,12 @@
         <artifactId>fly</artifactId>
         <groupId>com.fyp</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fly-notice-service</artifactId>
-
+    <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
