--- a/services/fly-user-service/src/main/resources/application.yml
+++ b/services/fly-user-service/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
   port: 8081
 spring:
-  application:
-    name: fly-user-service
+    application:
+       name: fly-user-service
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://panzi:123456@localhost:8761/eureka
   instance:
     prefer-ip-address: true
     instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
