--- a/services/fly-services-parent/src/main/resources/application.properties
+++ b/services/fly-services-parent/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 fly.eurekaUserName=panzi
 fly.eurekaPassword=123456
 fly.eurekaPort=8761
-fly.eurekaClientServiceUrlDefaultZone=http://${fly.eurekaUserName}:${fly.eurekaPassword}@localhost:${fly.eurekaPort}/eureka
+#fly.eurekaClientServiceUrlDefaultZone=http://${fly.eurekaUserName}:${fly.eurekaPassword}@localhost:${fly.eurekaPort}/eureka
+fly.eurekaClientServiceUrlDefaultZone=http://${fly.eurekaUserName}:${fly.eurekaPassword}@eureka1:8761/eureka,http://${fly.eurekaUserName}:${fly.eurekaPassword}@eureka2:8762/eureka
