--- a/services/fly-user-service/src/main/resources/application.yml
+++ b/services/fly-user-service/src/main/resources/application.yml
@@ -10,6 +10,8 @@ eureka:
   instance:
     prefer-ip-address: true
     instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
+    metadata-map:
+      description: user service：base api，account api
 logging:
   level:
     org:
