--- a/services/fly-services-discovery/src/main/resources/application-eureka2.yml
+++ b/services/fly-services-discovery/src/main/resources/application-eureka2.yml
@@ -1,9 +1,9 @@
+server:
+  port: 8762
 spring:
   application:
     name: eureka-server
   profiles: eureka2
-server:
-  port: 8762
 eureka:
   instance:
     hostname: eureka2
@@ -12,3 +12,5 @@ eureka:
     # server2 注册到server1 上
       defaultZone: http://panzi:123456@eureka1:8761/eureka/
     register-with-eureka: true
+    prefer-ip-address: true
+    instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
