--- a/services/fly-user-service/src/main/resources/bootstrap.yml
+++ b/services/fly-user-service/src/main/resources/bootstrap.yml
@@ -9,6 +9,8 @@ spring:
       label: master
       profile: default
       name: ${spring.application.name}
+      username: panzi
+      password: 123456
 eureka:
   client:
     serviceUrl:
