test spring cloud bus

--- a/services/fly-user-service/src/main/resources/application.yml
+++ b/services/fly-user-service/src/main/resources/application.yml
@@ -6,9 +6,16 @@ eureka:
     instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
     metadata-map:
       description: user service,base api,account api
+spring:
+  rabbitmq:
+    host: 192.168.187.129
+    port: 5672
+    username: panzi
+    password: 123456
+    virtual-host: fly
 logging:
   level:
     org:
       springframework:
         security: INFO
-        boot: INFO
+        boot: DEBUG
