--- a/services/fly-user-service/src/main/resources/application.yml
+++ b/services/fly-user-service/src/main/resources/application.yml
@@ -8,14 +8,14 @@ eureka:
       description: user service,base api,account api
 spring:
   rabbitmq:
-    host: 192.168.187.129
-    port: 5672
-    username: panzi
-    password: 123456
-    virtual-host: fly
+    host: ${rabbitmq.host}
+    port: ${rabbitmq.port}
+    username: ${rabbitmq.username}
+    password: ${rabbitmq.password}
+    virtual-host: ${rabbitmq.virtual-host}
 logging:
   level:
     org:
       springframework:
         security: INFO
-        boot: DEBUG
+        boot: INFO
