--- a/fly-config/src/main/resources/bootstrap.yml
+++ b/fly-config/src/main/resources/bootstrap.yml
@@ -1,10 +1,10 @@
 encrypt:
   key: fly
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: '*'
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 spring:
   rabbitmq:
     host: 127.0.0.1
