--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
+                <groupId>com.fyp</groupId>
+                <artifactId>fly-common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-parent</artifactId>
                 <version>2.1.3.RELEASE</version>
@@ -85,5 +90,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
