--- a/services/fly-account-service/src/main/resources/bootstrap.yml
+++ b/services/fly-account-service/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
         enabled: true
       label: master
       profile: default
-      name: ${spring.application.name},rabbitmq,mysql
+      name: ${spring.application.name},rabbitmq,mysql,redis
       username: panzi
       password: 123456
       fail-fast: true
