--- a/services/fly-services-parent/pom.xml
+++ b/services/fly-services-parent/pom.xml
@@ -45,6 +45,10 @@
             <version>2.0.0</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.38</version>
