--- a/fly-common/pom.xml
+++ b/fly-common/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>fly-common</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+        </dependency>
+    </dependencies>
 </project>
