--- a/services/fly-services-parent/pom.xml
+++ b/services/fly-services-parent/pom.xml
@@ -57,6 +57,18 @@
             <groupId>com.fyp</groupId>
             <artifactId>fly-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
