--- a/fly-web/pom.xml
+++ b/fly-web/pom.xml
@@ -25,5 +25,9 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fyp</groupId>
+            <artifactId>fly-common</artifactId>
+        </dependency>
     </dependencies>
 </project>
