--- a/services/fly-account-service/src/main/resources/bootstrap.yml
+++ b/services/fly-account-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: fly-account-service
+    name: fly-user-service
   cloud:
     config:
       discovery:
@@ -8,7 +8,7 @@ spring:
         enabled: true
       label: master
       profile: default
-      name: ${spring.application.name},rabbitmq,mysql,redis
+      name: rabbitmq,mysql,redis
       username: panzi
       password: 123456
       fail-fast: true
