--- a/fly-gateway/pom.xml
+++ b/fly-gateway/pom.xml
@@ -6,10 +6,12 @@
         <artifactId>fly</artifactId>
         <groupId>com.fyp</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fly-gateway</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -18,6 +20,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fyp</groupId>
+            <artifactId>fly-common</artifactId>
         </dependency>
     </dependencies>
 </project>
