--- a/fly-web/pom.xml
+++ b/fly-web/pom.xml
@@ -6,10 +6,12 @@
         <artifactId>fly</artifactId>
         <groupId>com.fyp</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fly-web</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
