--- a/fly-web/src/main/resources/application.yml
+++ b/fly-web/src/main/resources/application.yml
@@ -1,5 +1,18 @@
 server:
   port: 8089
+spring:
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password:
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
+    timeout: 1000
 sso:
   url: http://localhost:9000
 logging:
