--- a/services/fly-article-service/pom.xml
+++ b/services/fly-article-service/pom.xml
@@ -23,5 +23,10 @@
             <groupId>com.fyp</groupId>
             <artifactId>fly-services-parent</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
