--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>fly-common</module>
         <module>fly-config</module>
         <module>fly-sso</module>
+        <module>services/fly-common-service</module>
 
     </modules>
 
