--- a/fly-gateway/pom.xml
+++ b/fly-gateway/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fyp</groupId>
             <artifactId>fly-common</artifactId>
         </dependency>
