--- a/services/fly-comment-service/src/main/resources/application.yml
+++ b/services/fly-comment-service/src/main/resources/application.yml
@@ -1,12 +1,20 @@
 server:
-  port: 8083
-spring:
-  application:
-    name: fly-comment-service
+  port: 8085
 eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${fly.eurekaClientServiceUrlDefaultZone}
   instance:
     prefer-ip-address: true
     instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
+    metadata-map:
+      description: comment service
+spring:
+  rabbitmq:
+    host: ${rabbitmq.host}
+    port: ${rabbitmq.port}
+    username: ${rabbitmq.username}
+    password: ${rabbitmq.password}
+    virtual-host: ${rabbitmq.virtual-host}
+  datasource:
+    driver-class-name: ${mysql.driver-class-name}
+    url: ${mysql.url}
+    username: ${mysql.username}
+    password: ${mysql.password}
