--- a/fly-gateway/pom.xml
+++ b/fly-gateway/pom.xml
@@ -26,6 +26,14 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fyp</groupId>
             <artifactId>fly-common</artifactId>
         </dependency>
