--- a/fly-gateway/src/main/resources/application.yml
+++ b/fly-gateway/src/main/resources/application.yml
@@ -3,6 +3,11 @@ server:
 spring:
   application:
     name: fly-gateway
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
 eureka:
   client:
     serviceUrl:
