--- a/fly-sso/pom.xml
+++ b/fly-sso/pom.xml
@@ -38,6 +38,14 @@
             <artifactId>fastjson</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fyp</groupId>
             <artifactId>fly-common</artifactId>
         </dependency>
