--- a/fly-web/src/main/resources/application.yml
+++ b/fly-web/src/main/resources/application.yml
@@ -13,6 +13,13 @@ spring:
         max-idle: 8
         min-idle: 0
     timeout: 1000
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
+  application:
+    name: fly-web
 sso:
   url: http://localhost:9000
 gateway:
