--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>fly-config</module>
         <module>fly-sso</module>
         <module>services/fly-common-service</module>
+        <module>fly-zipkin</module>
 
     </modules>
 
