--- a/services/fly-account-service/src/main/resources/application.yml
+++ b/services/fly-account-service/src/main/resources/application.yml
@@ -18,13 +18,12 @@ spring:
     url: ${mysql.url}
     username: ${mysql.username}
     password: ${mysql.password}
+  zipkin:
+    base-url: http://localhost:9411
+    discovery-client-enabled: true
+  sleuth:
+    sampler:
+      probability: 1.0
 jwt:
   secret: 123456
-logging:
-  level:
-    com:
-      fyp:
-        fly:
-          services:
-            account: debug
 
