--- a/services/fly-article-service/src/main/resources/application.yml
+++ b/services/fly-article-service/src/main/resources/application.yml
@@ -18,3 +18,11 @@ spring:
     url: ${mysql.url}
     username: ${mysql.username}
     password: ${mysql.password}
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
+logging:
+  level:
+    org.springframework.web.servlet.DispatcherServlet: DEBUG
