--- a/services/fly-base-service/src/main/resources/application.yml
+++ b/services/fly-base-service/src/main/resources/application.yml
@@ -12,3 +12,8 @@ eureka:
     instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
     metadata-map:
       description: base service
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
