--- a/services/fly-common-service/src/main/resources/application.yml
+++ b/services/fly-common-service/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
     url: ${mysql.url}
     username: ${mysql.username}
     password: ${mysql.password}
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
 # 计数服务每个hash存储的条数
 count:
   bucket:
