--- a/fly-gateway/src/main/resources/application.yml
+++ b/fly-gateway/src/main/resources/application.yml
@@ -16,7 +16,7 @@ eureka:
     prefer-ip-address: true
     instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
     metadata-map:
-      description: account service
+      description: gateway
 management:
   endpoints:
     web:
