--- a/services/fly-base-service/src/main/resources/application.yml
+++ b/services/fly-base-service/src/main/resources/application.yml
@@ -9,7 +9,9 @@ eureka:
       defaultZone: http://panzi:123456@192.168.187.129:8761/eureka/,http://panzi:123456@192.168.187.130:8761/eureka/
   instance:
     prefer-ip-address: true
-    instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
+    # 不填写ip-address 会导致 只能注册成功一个服务 要用ipaddress 区分开
+    ip-address: ${spring.cloud.client.ip-address}
+    instanceId: ${spring.application.name}:${eureka.instance.ip-address}:${server.port}
     metadata-map:
       description: base service
   zipkin:
