--- a/fly-gateway/src/main/resources/application.yml
+++ b/fly-gateway/src/main/resources/application.yml
@@ -14,7 +14,8 @@ eureka:
       defaultZone: http://panzi:123456@192.168.187.129:8761/eureka/,http://panzi:123456@192.168.187.130:8761/eureka/
   instance:
     prefer-ip-address: true
-    instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
+    ip-address: ${spring.cloud.client.ip-address}
+    instanceId: ${spring.application.name}:${eureka.instance.ip-address}:${server.port}
     metadata-map:
       description: gateway
 management:
