--- a/services/fly-base-service/src/main/resources/application.yml
+++ b/services/fly-base-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://panzi:123456@192.168.187.129:8761/eureka/,http://panzi:123456@192.168.187.130:8761/eureka/
+      defaultZone: http://panzi:123456@eureka2:8762/eureka/,http://panzi:123456@eureka1:8761/eureka/
   instance:
     prefer-ip-address: true
     # 不填写ip-address 会导致 只能注册成功一个服务 要用ipaddress 区分开
@@ -15,7 +15,7 @@ eureka:
     metadata-map:
       description: base service
   zipkin:
-    base-url: http://192.168.187.129:9411
+    base-url: http://127.0.0.1:9411
   sleuth:
     sampler:
       probability: 1.0
