--- a/services/fly-article-service/src/main/resources/bootstrap.yml
+++ b/services/fly-article-service/src/main/resources/bootstrap.yml
@@ -15,7 +15,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://panzi:123456@192.168.187.129:8761/eureka/,http://panzi:123456@192.168.187.130:8761/eureka/
+      defaultZone: http://panzi:123456@eureka2:8762/eureka/,http://panzi:123456@eureka1:8761/eureka/
 management:
   endpoints:
     web:
